--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: overlay;
+    border-radius: 16px;
 }
 .banner-content{
     height: 600px;
@@ -27,6 +28,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 .banner-content p, h1{
     color: white;
@@ -67,7 +69,7 @@ body{
     font-weight: 500;
 }
 .second-section-content h3{
-    margin-top: 30px;
+    margin-top: 15px;
     color: rgb(7, 2, 17);
     font-family: Inter;
     font-size: 48px;
@@ -95,6 +97,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    border-radius: 16px;
 }
 .leftside-content{
     width: 50%;
@@ -114,6 +117,7 @@ body{
     font-family: Merriweather;
     font-size: 64px;
     font-weight: 900;
+    margin-bottom: 30px;
 }
 .leftside-content p{
     color: rgba(255, 255, 255, 0.8);
@@ -157,6 +161,7 @@ body{
     font-family: Inter;
     font-size: 32px;
     font-weight: 600px;
+    text-align: center;
 }
 .date-section-title span{
        color: red;
@@ -166,8 +171,14 @@ body{
     height: 40px;
     border-radius: 8px;
     background: rgb(255, 0, 0);
-    margin-left: 180px;
+    margin-left: 20px;
     margin-top: 30px;
+}
+#join-color{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 /* comingsoon section styles */
@@ -232,7 +243,7 @@ body{
 .coming-text{
     width: 200px;
     height: 100%;
-    margin-top: 130px;
+    margin-top: 70px;
 }
 .coming-img{
     width: 200px;
@@ -242,12 +253,14 @@ body{
     color: rgb(255, 0, 0);
     font-family: Inter;
     font-size: 48px;
+    margin-bottom: 20px;
  }
  .comingsoon-2024-section p{
     color: rgba(7, 2, 17, 0.6);
     font-family: Inter;
     font-size: 20px;
     font-weight: 400;
+    margin-bottom: 30px;
  }
  
  /* holiday section  */
@@ -279,12 +292,16 @@ body{
     line-height: 91px;
     letter-spacing: 0%;
     text-align: center;
+    margin-top: 30px;
  }
  .holiday-text-container p{
     color: rgba(7, 2, 17, 0.6);
     font-family: Inter;
     font-size: 20px;
     font-weight: 500;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
  }
  #holiday{
     color: rgb(255, 0, 0);
@@ -311,3 +328,161 @@ body{
     /* z-index: 1;
     z-index: -1; */
  }
+
+ /* portfolio section styles */
+ .portfolio-container{
+    width: 1320px;
+    height: 1163px;
+    margin: 0 auto;
+    margin-top: 120px;
+ }
+ .portfolio-text-content h5{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 20px;
+ }
+ .portfolio-text-content h2{
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 20px;
+ }
+ .portfolio-text-content p{
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+ }
+ .portfolio-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+ }
+.item{
+    width: 424px;
+    height: 450px;
+    margin-top:  30px;
+}
+.item img{
+    width: 100%;
+    height: 100%;
+}
+
+/* subscribe section styles */
+.subscribe-section-container{
+    width: 1320px;
+    height: 616px;
+    margin: 0 auto;
+    margin-top: 120px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.subscribe-section-content img{
+    width: 150px;
+    height: 150px;
+    margin-left: 350px;
+    margin-bottom: 20px;
+}
+.subscribe-section-content h2{
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    width: 512px;
+    height: 60px;
+    margin-left: 170px;
+    margin-bottom: 20px;
+}
+.subscribe-section-content p{
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    width: 896px;
+    height: 64px;
+    text-align: center;
+}
+ .btn-part{
+    width: 648px;
+    height: 72px;
+    border-radius: 50px;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    margin-left: 120px;
+    margin-top: 40px;
+ }
+.email-part{
+    color: rgba(7, 2, 17, 0.3);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    margin-top: 25px;
+    margin-left: 40px;
+}
+.sub-btn-part{
+    width: 210px;
+    height: 72px;
+    border-radius: 0px 50px 50px 0px;
+    background: rgb(255, 0, 0);
+    border: none;
+}
+#subs-text{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+/* footer section styles */
+
+.footer-container{
+    width: 1600px;
+    height: 609px;
+    margin: 0 auto;
+    margin-top: 120px;
+    background: rgb(7, 2, 17);
+    padding: 30px;
+}
+.phone{
+    margin-right: 5px;
+}
+.contact{
+    display: flex;
+    color: #ffffff;
+}
+.footer-first-section{
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    color: #ffffff;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+}
+.hr{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+.social-icons{
+    width: 280px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+.footer-end-text{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    color: #ffffff;
+    justify-content: space-between;
+    margin-top: 80px;
+}
